Rework for java 8