@@ -2,11 +2,14 @@ package ru.nikon.petr.reflection.benchmark.codegeneration;
 
 import lombok.SneakyThrows;
 
+import javax.tools.JavaCompiler;
 import javax.tools.ToolProvider;
 import java.io.File;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.OpenOption;
 
 public final class CodeGenerationUtils {
 
@@ -17,23 +20,23 @@ public final class CodeGenerationUtils {
 
     @SneakyThrows
     public static Class<?> load(String fullClassName, String source) {
-        var javaFile = saveJavaFile(fullClassName, source);
+        File javaFile = saveJavaFile(fullClassName, source);
 
-        var compiler = ToolProvider.getSystemJavaCompiler();
+        JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
         compiler.run(null, null, null, javaFile.getPath());
 
-        var classLoader = URLClassLoader.newInstance(new URL[] { ROOT.toURI().toURL() });
-        var clazz = Class.forName(fullClassName, true, classLoader);
+        ClassLoader classLoader = URLClassLoader.newInstance(new URL[] { ROOT.toURI().toURL() });
+        Class<?> clazz = Class.forName(fullClassName, true, classLoader);
 
         return clazz;
     }
 
     @SneakyThrows
     private static File saveJavaFile(String fullClassName, String source) {
-        var sourceFile = new File(ROOT, fullClassName.replaceAll("\\.", "/") + ".java");
+        File sourceFile = new File(ROOT, fullClassName.replaceAll("\\.", "/") + ".java");
 
         sourceFile.getParentFile().mkdirs();
-        Files.writeString(sourceFile.toPath(), source);
+        Files.write(sourceFile.toPath(), source.getBytes(StandardCharsets.UTF_8));
 
         return sourceFile;
     }
